Updating all tex files, images.

--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -11,14 +11,12 @@
 
 \begin{tabbing}
 %June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
-{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
-{\normalfont\color{red}Members' Quarterly Meeting}\\
-May 23, 2015      \> Board of Directors' Meeting\\ 
-June 06, 2015     \> Doors Open Ottawa\\
-July 01, 2015  \> Canada Day\\
-September 12, 2015   \> Board of Directors' Meeting\\
-November 07, 2015  \> Board of Directors' Meeting\\
-November 21, 2015 \> Annual General Meeting and Board of Directors' Meeting
+%{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
+%{\normalfont\color{red}Members' Quarterly Meeting}\\
+May 26, 2016   \hspace{50mm}\= Board of Directors' Meeting\\ 
+July 01, 2016  \> Canada Day\\
+September 15, 2016   \> Board of Directors' Meeting\\
+September 24, 2016 \> Annual General Meeting
 
 \end{tabbing}
 
