--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -11,15 +11,130 @@
 
 \end{multicols}
 
-\textit{Bruce Gemmill has been involved with Project North Star since 2005 and
-	has exceeded 9,000 volunteer hours. Bruce is presently the Project
-	Manager, as well as a member of the board of directors.}
+\begin{quotation}
+	\textit{Bruce Gemmill has been involved with Project North Star since 2005 and	has exceeded 9,000 volunteer hours. Bruce is presently the Project Manager, as well as a member of the board of directors.}
+\end{quotation}
+
+\begin{multicols}{2}
+
+1.\textit{What is your background in aviation?}
+
+Before joining Project North Star, I served in the Canadian Forces for
+38 years as a communications and electronics officer.  Although I
+never flew as air crew, I worked on air force communications and radar
+systems, air traffic control, and NORAD air defence.  I served on
+several air force bases, including North Bay and Trenton, and my last
+air force position was senior communications adviser to the Commander
+of Canadian NORAD Region in Winnipeg.
+
+2. \textit{How long have you been involved with Project North Star and how and why did you get involved?}
+
+After I retired from the Canadian Forces in 2005, I wanted to do
+something that was technically challenging and interesting.  I'd done
+some woodworking and motorcycle restoration, and one day I was riding
+past the Aviation Museum and decided on a whim I would ask if there
+was an opportunity to volunteer on an aircraft restoration project.
+Six months later I started on Project North Star.
+
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
+%   %caption of the figure 
+%   \caption*{\small \em Forward cockpit -- complete.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:fwd_cockpit_complete}
+%\end{figure}
+
+3. \textit{What has been the history of your involvement to date?}
+
+Since I had no specific aircraft maintenance training or experience, I
+began working on electronic assemblies that had been removed from the
+aircraft cockpit during the early days of the project.  With no test
+equipment, manuals or spare parts, the work was mainly cleaning and
+repainting the cases and front panels.  As I got more familiar with
+the equipment, I learned how to spray paint, and did minor repairs to
+wiring.  I also worked on electrical components from the Merlin
+engine, such as the magnetos and starter motor. 
+
+\begin{figure}[htbp]
+	\vspace{2em}
+	\centering
+	%name of the graphic, without the path AND in EPS format:
+	\includegraphics[scale=0.9]{resources/PNS2008-10-26_23-31-42.png}
+	%caption of the figure 
+	\caption*{\small \em Propeller assembly.}
+	%label of the figure, which has to correspond to \ref{}:
+	\label{fig:propeller}
+\end{figure}
+
+The most demanding job was removing several of the propellers so they could be shipped for restoration.  Years of corrosion had sealed the spinners onto the propeller hubs.  Removal required the use of dental picks and a large sledge hammer!
+
+
+After helping with restoration work on Engine One, I began working on
+the cockpit as a major project.  I spent approximately five years
+working with other volunteers, beginning with removal of as much
+equipment as possible from the cockpit and crew lounge, including the
+control column, rudder pedals and center control console, seats and
+headliners.  A lot of time was spent cleaning and repairing corrosion
+damage before painting the cockpit and installing new insulation.  I
+found it very rewarding when we began installing previously restored
+equipment to the "new" cockpit, but also very challenging. 
+
+\begin{figure}[htbp]
+	\vspace{2em}
+	\centering
+	%name of the graphic, without the path AND in EPS format:
+	\includegraphics[scale=1.3]{resources/NorthStarCockpitDec2011.png}
+	%caption of the figure 
+	\caption*{\small \em Forward cockpit -- complete.}
+	%label of the figure, which has to correspond to \ref{}:
+	\label{fig:fwd_cockpit_complete}
+\end{figure}
+
+ A lot of equipment and fittings had been removed prior to me joining the project, and not all removal work had been documented.  Detective work was required to search out photographs that showed where some equipment was installed.
+
+4. \textit{What has been the highlight of your involvement?}
+
+Completion of the cockpit and crew lounge has certainly been the most
+significant achievement for me personally. The project team has
+received high praise from numerous visitors who have commented on the
+high quality of the restoration work.  Although we consider the work
+done, I do still want to complete the restoration by finding a few
+missing radios and instruments that were removed by the RCAF.
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.75]{resources/NavigatorRack.png}
+   %caption of the figure 
+   \caption*{\small \em Navigator rack.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:nav-radio-rack}
+\end{figure}
+
+5. \textit{What has been the most challenging part of your involvement?}
+
+Finding spare and missing parts for the aircraft has always been a
+challenge.  Our ability to search out possible sources is limited, as
+are funds.  We have been lucky to get most parts needed for the Rolls
+Royce engines, but many items for the airframe are not easy to come
+by.  These include everything from very large and expensive items,
+such as the de-icing boots for the wings and tail, to door and window
+seals.  Rubber and fabric items are particularly hard to find, since
+these items deteriorate with age.  Finding the correct paint has
+recently become a major challenge because of stricter environmental
+laws.  Our goal of achieving an authentic restoration of the North
+Star will only become more difficult with the passage of time.
+
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
 \end{footnotesize}
 
-\begin{multicols}{2}
+
 
 % End of text.
 
