--- a/pnsac/newsletter/article_MessageDGCASM.tex
+++ b/pnsac/newsletter/article_MessageDGCASM.tex
@@ -4,117 +4,53 @@
 
 % Head
 
-\title{Project Manager's Progress Report}
-\subtitle{November 2015}
-\author{Bruce Gemmill}
+\title{Message from the CASM Director General}
+%\subtitle{November 2015}
+\author{Chris Kitzan}
 
 \maketitle
 
-The aircraft spent considerable time outside this year, but since we
-are short of volunteers, not as much work was done as hoped.  The
-aircraft is still outside because we are waiting for space to be freed
-up in the storage hangar.  We also expect the North Star to be moved
-outside again in early spring, much sooner than normal, to accommodate
-other uses of the storage facility.  This extended time outside has
-delayed some work, and may result in additional weather damage.
+\begin{quotation}
+	\textit{Chris Kitzan was appointed the new director general of CASM last
+	November. Previously he was the chief of staff at Library and Archives
+	Canada. Before that he worked as a curator and exhibit manager at what
+	was then known as the Canadian Museum of Civilization.}
+\end{quotation}
 
-\section{Nr 4 Engine}
-\label{sec:engine_4}
 
-The last engine to undergo restoration was disassembled last fall.
-Since the engine shop crew have cleaned, painted and re-assembled much
-of the engine on the engine assembly stand. The refurbished crankshaft
-has been installed in the engine block, and the connecting rods and
-pistons cleaned and polished.  Also completed are the more complex
-cylinder heads and valve train assemblies, and work has begun to
-restore many ancillary pieces, such as the magnetos and other
-electrical components, and accessories.
+My tenure at the Museum is just beginning, but already I have observed
+first-hand the contribution volunteers are making, from my meetings
+with members, to my perspective as a father watching you
+enthusiastically cater to my eight year old son's interests, to the
+communications I have received from you with ideas and offers of
+support, and finally from guests who have written thanking the Museum
+for experiences they have had interacting with you on the floor.  I
+have never worked in an organization that had so many individuals
+willing to donate anywhere near the amount of time and energy you do.
+Given that, is it fair to want more?  I hope so.  With your support, I
+would like to tap a little deeper into your energy and discuss ways we
+can further work together to innovate and inspire.  
 
-The auxiliary gearbox was removed from Nacelle 4 and has been
-completely rebuilt, along with the generator.  These won’t be
-installed on the aircraft until shortly before engine 4 is ready to be
-installed.
+I recognize that increased collaboration between passionate parties
+will sometimes create moments of turbulence.  I feel it is a small
+price to pay if we are all committed to the ultimate goal --
+maximizing the potential of this organization.  That is why, on the
+North Star front, Richard and CASM staff are currently trying to find
+solutions that allow us to meet our collective objectives.  And why I
+hope that these initial conversations lead to increased discussions,
+and volunteer/staff collaboration on a wider range of fronts.  
 
-Work has also begun on the engine frame which holds the 12 cylinder
-engine and supports the surrounding cowl panels.  Once the engine
-frame is ready, the engine will be transferred to it from the engine
-stand.  Because of a lack of space and shortage of qualified
-volunteers, we don’t expect to have engine 4 completed before 2017.  A
-great deal of work is also needed on the cowl panels.  We hope to
-start work on these in the New Year.
-
-\section{Fuselage and Main Cabin}
-\label{sec:main_cabin}
-
-Work has continued in the main cabin.  After removing all floor and
-wall panels, as well as numerous fittings, the floor was cleaned and
-all cargo tiedowns thoroughly treated to remove corrosion.  Several
-required removal and repair. The starboard windows were repainted and
-new Plexiglas installed, then the windows were re-installed on the
-aircraft.  The port windows were then removed and repaired, but had to
-be installed prior to completion so the aircraft could stay outside
-this summer.  These will need to be removed again this winter and the
-new glass installed before being returned to the aircraft.  Some
-corrosion damage along the exposed ribs and sub floor has been
-completed.  The rear bulkhead required considerable work.  This
-involved removing a large corroded floor panel and three rear bulkhead
-panels.  New panels were made and are being installed.
-
-The forward bulkhead and forward half of the floor have been painted,
-but further painting was stopped by the arrival of cold weather in
-October.  The painting will have to be completed next summer.
-
-The forward cargo door was cleaned, painted and new seals installed.
-The door was put back on the aircraft to secure it while outside this
-summer.  This winter we plan on removing the rear cargo door for
-similar work.
-
-The tail section and rear belly compartment underwent some cleaning
-and repair.  This work will also continue this winter in the storage
-hangar.
-
-\section{Cabin Liners and Troop Seats}
-\label{sec:liners_troop_seats}
-
-Most original cabin liners have now been repaired or replaced with new
-liners.  The liners still need to be painted and many stencils need to
-be applied, as well as many new snap fasteners.  
-
-The troop seats were built last year and placed in storage.  Some work
-has been done to restore the many fitting needed to install the troop
-seats, along with litter straps and tiedowns for litters and cargo.
-
-\section{Planned Restoration Work---2016}
-\label{sec:plannedwork}
-
-Over the next year, we will continue to work on Engine 4 and the main
-cabin and doors.  The aircraft will be moved outside in the late
-winter or early spring to allow setup for a planned Star Trek exhibit.
-Work will not begin inside the aircraft until the weather warms up, so
-further delays are inevitable.  
-
-We will be able to make new wall panels and either replace or restore
-the wood floor panels.
-
-We hope to have all main cabin painting done this summer, so that the
-wall and floor panels can be installed.  
-
-One other work item that may be started is to clean and restore the
-four engine nacelles.  Pipes and fittings need to be removed, followed
-by a thorough cleaning and a fresh coat of paint.  This work may be
-delayed until qualified volunteers become available.
-
-%\begin{figure}[htbp]
-%   \vspace{2em}
-%   \centering
-%   %name of the graphic, without the path AND in EPS format:
-%   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
-%   %caption of the figure 
-%   \caption*{\small \em Forward cockpit -- complete.}
-%   %label of the figure, which has to correspond to \ref{}:
-%   \label{fig:fwd_cockpit_complete}
-%\end{figure}
-
+On the one hand, the Canadair North Star was a reliable, versatile
+Canadian aircraft that provided our country with excellent service on
+both the military and civilian fronts for decades.  On the other, it
+made such a bloody racket that wherever it went it could not be
+ignored.  To my mind it's a worthy symbol of the kind of Museum I
+would like to see us continue to develop.  Based on its collection,
+its staff and its volunteers CASM has already established a reputation
+as a world-class Museum.    That standard cannot be sacrificed.  At
+the same time, there is room for us to make more noise; to try new
+ways to reach Canadians, catch their attention, and further share our
+rich collection and stories with them. 
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
