--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,39 +10,15 @@
 
 \maketitle
 
-It is a year since I last wrote Notes from the President for the NStar Chronicle. During this time there have been many changes within the Project North Star Association. 
+As I write these words I am watching the falling snow and preparing for a nasty weather mix this evening and at the same time thinking of the spring and summer and our outdoor activities with the North Star aircraft. 2016 has every chance of being an interesting year for the North Star volunteers. Although full details are not available yet, we are expecting to be able to show off the plane to the general public and to other groups several times this year. 
 
-In my last Notes, I referred to the temporary closure of restoration work by PNSAC volunteers on 
-the North Star. We effectively did not restart operations until the middle of last year which 
-resulted in a considerable loss of momentum for the Association as a whole together with the 
-resignation of some of our directors and officers.
+We are continuing to work closely with the Museum conservation staff to develop plans for extended hours working which basically means running a restoration shift on one or more Saturdays each month. This should enable some members to become Restoration Volunteers even though they are not available for work Mondays to Fridays. We had hoped to start the shift before Easter but it looks now as if the start date will be in the fall. There are still some details of supervision, security and safety to be worked out. Running a Saturday shift is a new endeavour for the Museum and it is important for everybody that we take the necessary time to get the operation properly setup so that we have a successful start and a good model for any further out of hours working arrangements for PNSAC or any other volunteer organization working on a museum corporation artifact. 
 
-Last November we held our Annual General Meeting, which will in future be held in the Fall rather 
-than in the summer when many of our members are on vacation. At this AGM two new directors were 
-elected to replace two out of the three directors who had resigned.
+We were very pleased to welcome Chris Kitzan, the new Director General of the Canada Aviation and Space Museum to our first Members' Meeting of 2016 which was held in the Bush Theatre on February 27th. Chris acknowledged the importance of the partnership between the museum and Project North Star. Following the meeting, I saw Chris having a lively and upbeat conversation with our members, over coffee and snacks. 
 
-We were very happy to welcome Roger Button and Phil Chrysler as new directors. Roger has been our corporate secretary. Phil has been our merchandise manager for several years and has also acted as assistant treasurer to the Association. 
-
-Drew Hodge, our long time NStar Chronicle publisher and webmaster, has after ten years, decided 
-that he would like to spend more time on his other interests and did not stand for re-election as a director. Drew will continue to publish the NStar Chronicle and we are very pleased to 
-welcome Garth Pyper as our new webmaster. 
-
-Bill Tate has been our vice president and  highly regarded special events coordinator for several years but decided that it was time to hand over to someone else. 
-
-Bruce Grant, who has ably editor the NS Chronicle for several years, also decided not to continue as a director and officer. Roger has agreed to take over the editor's  job where I am expecting that his word smithing abilities as a lawyer will come in handy.
-
-The table officers of the Association  are now:  myself as president; Bruce Gemmill ,our senior project manager, as vice president; Roger  as secretary; and Paul Labranche as treasurer. 
-
-While the changes have been taking place with the executive of the Association, work has continued with our main reason for being; the restoration of the North Star. Elsewhere in this issue you will find a progress report on the work on the aircraft which as always is being done to a very high standard.
-
-The North Star restoration project, now in its twelve year, will shortly be entering a new phase. 
-Work on the fourth engine will be complete in a few months and we are now reworking our work plan 
-for the restoration as a whole, in conjunction with the conservation professionals at Museum. In 
-a future issue of the NStar Chronicle we hope to provide members with the broad outline of the 
-updated work plan, together with anticipated time scales and funding requirements. Since the Museum does not receive government funds for the North Star restoration, future major work on the aircraft will have to be financed by donations from members and other people interested in preserving a plane which contributed so much to Canada?s military transportation needs in the late 1940s through to the early 1960s.
-
-During the summer we hope to have two major displays of the North Star for Association members and the general public. The first will be during the weekend of June 6/7 when we will be taking part in Doors Open Ottawa and the second will be our usual display on Canada Day. As always, Association members will be particularly welcome at these displays and will be able to see the results of the excellent work being done by the volunteers on the plane.
-
+Prior to the Members' Meeting, several of us ran into Mike Charters, who is a volunteer maintenance mechanic at the Warplane Heritage Museum in Hamilton. Mike was one of the team who flew to England in the summer of 2014 for the tour of the UK by the Canadian Lancaster together with the British Lancaster. Mike generously agreed to speak to the members for a few minutes and had some very interesting stories about the trip.
+ 
+One of the best activities for our members is to become an active volunteer. Our volunteers fall into two categories, Restoration Volunteers and Association Volunteers. The former are those who work on the North Star restoration and have to be limited in number because it is not possible to have too many people working at any one time; this is mainly for supervision and safety reasons. Association Volunteers are those who volunteer for other activities in our Association. There are many different things which need to be done in a volunteer organization and we encourage our members to contact us to volunteer for such things as meeting the public on aircraft open days, helping to organize events and assisting with sales of our merchandise. Volunteering has many rewards, from comradeship with other volunteers, enjoying involvement with an interesting aviation artifact and personal satisfaction derived from doing something worthwhile. If you are interested in exploring volunteering opportunities, do contact any one of our directors whose contact information is shown at the end of this newsletter. 
 
 
 \begin{footnotesize}
