--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -31,7 +31,7 @@ restore many ancillary pieces, such as the magnetos and other
 electrical components, and accessories.
 
 The auxiliary gearbox was removed from Nacelle 4 and has been
-completely rebuilt, along with the generator.  These won’t be
+completely rebuilt, along with the generator.  These won't be
 installed on the aircraft until shortly before engine 4 is ready to be
 installed.
 
@@ -39,7 +39,7 @@ Work has also begun on the engine frame which holds the 12 cylinder
 engine and supports the surrounding cowl panels.  Once the engine
 frame is ready, the engine will be transferred to it from the engine
 stand.  Because of a lack of space and shortage of qualified
-volunteers, we don’t expect to have engine 4 completed before 2017.  A
+volunteers, we don't expect to have engine 4 completed before 2017.  A
 great deal of work is also needed on the cowl panels.  We hope to
 start work on these in the New Year.
 
@@ -103,6 +103,25 @@ One other work item that may be started is to clean and restore the
 four engine nacelles.  Pipes and fittings need to be removed, followed
 by a thorough cleaning and a fresh coat of paint.  This work may be
 delayed until qualified volunteers become available.
+
+\section{March 2016 Update}
+\label{sec:update}
+
+Since our report at the November AGM, the aircraft was moved inside,
+so that it could properly sealed against the weather, as it will spend
+much of 2016 outside. The aircraft was moved out again in March.
+During this time, very little work was done on the aircraft, except
+for replacement of the Plexiglas in the port windows, and the
+installation of the ARC-552 UHF radio, kindly transferred to the
+museum by the Department of National Defence.
+
+\subsection{Nr 4 Engine}
+\label{sec:update-engine}
+
+The engine frame has been refurbished, and the engine was transferred
+to the frame, so that ancillary equipment can be installed.  Work has
+also begun on the supercharger, as well as such items as the starter
+motor and header tank.  Some work is also being done on the cowl panels.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
