--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -51,7 +51,7 @@
 
 \volume{12} % \volnumber{1}
 \issue{1}
-\date{January 2016} 
+\date{March 2016} 
 \titlepage
 
 % Editor's notes
@@ -78,7 +78,7 @@
 	\input{article_PresReport} 
 \end{article}
 
-\pagebreak
+%\pagebreak
 
 % Progress report ................................................... %
 
@@ -87,7 +87,7 @@
 	\input{article_ProgReport} 
 \end{article}
 
-\pagebreak
+%\pagebreak
 
 % Member interview ................................................... %
 
@@ -95,6 +95,8 @@
 \begin{article}
     \input{article_MemberInterview} 
 \end{article}
+
+\pagebreak
 
 % Features
 % ........................................................... %
@@ -144,10 +146,10 @@
 %	\input{article_SpecialEvents} 
 %\end{article}
 
-% Special article 
-% \begin{article}
-% 	\input{article_Special} 
-% \end{article}
+% Miscellany article 
+ \begin{article}
+ 	\input{article_Miscellany} 
+ \end{article}
 
 %\pagebreak
 
