--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -13,8 +13,8 @@
 %\begin{minipage}{\columnwidth}
 
 \address{Richard Lodge\\
-Director, President; Fund Raising\\
-\email{info@projectnorthstar.ca}}
+Director, President\\
+\email{president@projectnorthstar.ca}}
 
 %\address{Bill Tate\\
 %Director, Vice President; Special Events, Quarterly Meetings \\
@@ -27,7 +27,7 @@ Director, Project Manager; Membership\\
 
 
 \address{Garry Dupont\\
-Director, Deputy Project Manager}\\
+Director, Project Manager}\\
 
 
 %\end{minipage}
@@ -102,11 +102,12 @@ Treasurer\\
 
 \scriptsize\address{PNSAC\\
 P.O.Box 44005\\
-514 Montreal Road\\
 Ottawa, ON\\
 K1K 4P8}\\
 
-\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}}\\
+\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
+	General enquiries:\email{info@projectnorthstar.ca}}
+
 
 
 \begin{figure}
