--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -6,55 +6,34 @@
 
 
 \title{Editor's Notes} 
-\author{Bruce Grant}
+\author{Roger Button}
 
 \maketitle
 
 \end{multicols}
 
-While our project has been on hold, your editor still had to find some
-content for the Chronicle.
 
-%This issue of the Chronicle carries the last of four chapters in
-%Richard Lodge's story of his time at Rolls-Royce. Taken together, they
-%make an interesting ethnology of an extinct industrial culture. The
-%whole series is accessible through our website,
-%{\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}} (note that
-%the location of the newsletter archive will change when the new
-%website goes live) starting with the April 2013 issue of the
-%Chronicle.
 
 \vspace{12pt}
 
-Jim Riddoch came to the rescue with a story about a
-successful/disastrous flight test.  We like these kinds of
-stories\textemdash too small and personal to turn up in the history books, but
-they do pull you into real human experiences. There will be more of these. 
+This past year started off as a repeat of the difficult year the
+Association experienced in 2014. Consequently there was little news
+and less enthusiasm for publishing the Chronicle on any regular
+basis. However, as a result of changes to the management of the museum
+organization there is a renewed sense of hope that we will be able to
+move forward in 2016, as expressed in the Notes from the
+President. One of those changes is the appointment of Chris Kitzan as
+the new director general of CASM. You will find a message from Chris
+in this edition. Chris and his boss Alex Benay, the CEO of the museum
+corporation, are enthusiastic supporters of our organization. We are also
+commencing a new feature highlighting the members of our Association
+and starting off with Bruce Gemmill, our Project Manager. In addition,
+we are adding a "Miscellany" feature which lists items of interest to
+our members. If any of our readers wish to contribute an article, have
+suggestions for future articles, have suggestions for the "Miscellany"
+feature, or have any comments about the Chronicle please let me know.
 
-%We also have another hair-raising flying story from Tim Timmins. A
-%series of previous Timmins stories can be found through the same
-%website, starting with the December 2010 issue
-\vspace{12pt}
-
-Your editor became a writer too, and the writer submitted a tragic
-story about a French aviatice. The story was accepted by the editor in
-a blatant conflict of interest.
-
-%Motorheads among our readers should look into Ted Devey's extensive
-%writings on the Rolls-Royce Merlin, starting in the December 2006
-%issue.
-
-\vspace{12pt}
-
-And we bring you a poem by David Lambeth, an ode to the North Star
-that was first published in the Chronicle of November 2005. Volunteer
-Tim Timmins had found it in a hidey-hole in the aeroplane in the early
-days of our restoration project.  Enjoy!
-
-%All together, the archived issues are a valuable web resource for
-%readers with an interest in aviation history or the history of Project
-%North Star.
-
+%\vspace{12pt}
 
 
 \begin{footnotesize} \raggedleft PNSAC\\
