--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -14,12 +14,12 @@
 %  Sqn, RCAF.}\\
 
 \begin{quotation}
-	You have to be careful opening up the panels covering the 
+	\textit{You have to be careful opening up the panels covering the 
 	engines, you never know if a bird or some animal might have made
-	its home there.
+	its home there.}
 \end{quotation}
 
-That’s one lesson a group of dedicated volunteers has learned in its
+That's one lesson a group of dedicated volunteers has learned in its
 10 years of painstaking work restoring a Royal Canadian Air Force
 North Star aircraft at the Canada Aviation and Space Museum in Ottawa.
 
@@ -36,9 +36,9 @@ North Star aircraft at the Canada Aviation and Space Museum in Ottawa.
 %\end{figure*}
 
 The aircraft had sat neglected outside the museum for
-years. “Essentially, the RCAF flew this one into the Rockcliffe Airport
-when it was decommissioned. It sat in a old until Robert Holmgren said
-someone should do something about it,” said project manager Bruce
+years. "Essentially, the RCAF flew this one into the Rockcliffe Airport
+when it was decommissioned. It sat in a field until Robert Holmgren said
+someone should do something about it," said project manager Bruce
 Gemmill.
 
 The airplane had been stripped of its non-essential gear and turned
@@ -47,15 +47,15 @@ hangars built during the Second World War at the former RCAF station
 at Rockcliffe in Ottawa. Time and weather took its toll. Birds and
 animals made nests where they could get inside the panelling.
 
-“We approached the museum about restoring the aircraft. At first, they
-didn’t know how to take us,” said Gemmill. “The museum had its own
+"We approached the museum about restoring the aircraft. At first, they
+didn't know how to take us," said Gemmill. "The museum had its own
 professional conservation staff but it had never worked with a team of
-volunteers.”
+volunteers."
 
 Eventually the museum agreed to work with the volunteers who formed
 the Project North Star Association of Canada with the late Robert
-Holmgren as president. “We became the model for other volunteer groups
-now working with the museum,” said the association’s current
+Holmgren as president. "We became the model for other volunteer groups
+now working with the museum," said the association's current
 president, Richard Lodge.
 
 Now the aircraft gets towed into a hangar where it is available to the
@@ -66,60 +66,62 @@ The North Star was built by Canadair in the late 1940s and 1950s. It
 was the RCAF version of the DC-4 civilian aircraft except that it used
 four Rolls-Royce Merlin engines. Canadair built 71 of the aircraft.
 
-The RCAF assigned the rst North Stars to 412 Squadron where they
+The RCAF assigned the first North Stars to 412 Squadron where they
 transported VIPs and were used in various transfigurations for
 reliable, long-range transport services.
 
 During the Korean War the North Star was used by No. 426 (Thunderbird)
-Sqdn. to ferry sup- plies across the Pacific Ocean to Japan (Operation
-Hawk: The Korean Airlift, July/August). They would y 599 round trips
+Sqdn. to ferry supplies across the Pacific Ocean to Japan (Operation
+Hawk: The Korean Airlift, July/August). They would fly 599 round trips
 over the Pacific and deliver seven million pounds of cargo and 13,000
 personnel on return trips. All this was achieved without a fatal
 crash.
 
-Most of the air force’s North Stars were declared surplus in the
+Most of the air force's North Stars were declared surplus in the
 1970s.
 
 In the 10 years that Project North Star has been in operation, the
 group has restored two of the four Merlin engines with a third one
 nearly completed.
 
-Each engine had to be taken o the aircraft, brought into the museum’s
+Each engine had to be taken o the aircraft, brought into the museum's
 shops where they were taken apart. Each item was tagged, catalogued 
-and usually photographed. “We take a lot of photographs. That’s
-how we know how they go back together,” said Lodge.
+and usually photographed. "We take a lot of photographs. That's
+how we know how they go back together," said Lodge.
 
-Engine project leader Garry Dupont said, “The first engine took us about
-four and a half years to restore. We’re almost finished the third engine
-which as taken us about two years. So we are getting faster.” The
+Engine project leader Garry Dupont said, "The first engine took us about
+four and a half years to restore. We're almost finished the third engine
+which as taken us about two years. So we are getting faster." The
 propellers were restored separately by Hope Aero Propeller and
 Components Inc. in Mississauga, Ont. All restoration work has to be up
 to the professional standards set by the museum.
 
 The group plans to restore the aircraft to its original look, not to
-have it y again.
+have it fly again.
 
 Lodge said that they have some RCAF manuals but a lot of time they do
 not help when it comes to putting 50-year-old parts together today.
 
 The aircraft itself, 17515, has seen countless hours of work put into
-re- storing the cockpit with all its switches and navigation
+restoring the cockpit with all its switches and navigation
 equipment and a small galley for the crew of seven.
 
 Still to be done is work in the cargo section and painting the
 exterior of the aircraft.
 
-“We know this aircraft ew during the Korean War. In fact, we have 
+"We know this aircraft flew during the Korean War. In fact, we have 
 pictures showing it configured with litters to bring the wounded back to
-Canada,” said Gimmell. “We don’t want to put in the litters but we
-have people working on creating the rope seats that were used.”
+Canada," said Gemmill. "We don't want to put in the litters but we
+have people working on creating the rope seats that were used."
 
 The plan is to paint the aircraft to its post-1965 markings, since it
-was painted with the Maple Leaf ag on it.
+was painted with the Maple Leaf flag on it.
 
-Still the search goes on to nd new members for the association. “The
-important thing is to nd new people to whom we can pass on this 
-knowledge and skills we are developing,” said Lodge.
+Still the search goes on to find new members for the association. "The
+important thing is to find new people to whom we can pass on this 
+knowledge and skills we are developing," said Lodge.
+
+\textit{Reprinted from the March/April 2014 edition of "Legion Magazine," with the kind permission of Jennifer Morse, General Manager of Canvet Publications, and Tom MacGregor.}
 
 
 
